--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "MSci"
+    url: /msci/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "HAB"
+    url: /HAB/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Photography"
+    url: /photography/
