changed to lowercase hab

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /msci/    
 
   - title: "HAB"
-    url: /HAB/    
+    url: /hab/    
     
   - title: "Photography"
     url: /photography/
