--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Ronan Laker"
 title_separator          : "-"
 name                     : &name "Ronan Laker"
 description              : &description "PhD Student at Imperial College London"
-url                      : https://rlaker.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : www.ronanlaker.com #https://rlaker.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "rlaker.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
