--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : G-E5SCH4JFCT
+    tracking_id          : G-4JBTD68E7Y
 
 
 # Site Author
