--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/ronan-laker-88b373101/"
+  linkedin         : "ronan-laker-88b373101/"
   orcid            : "https://orcid.org/0000-0002-6577-5515"
   pinterest        :
   soundcloud       :
