--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Ronan Laker"
-  avatar           : "profile.jpeg"
+  avatar           : "profiile.jpeg"
   bio              : "President's Scholar PhD student at Imperial College London studying the solar wind with Parker Solar Probe and Solar Orbiter"
   location         : "London"
   employer         :
