--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ social:
 analytics:
   provider               :  "custom" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : G-4JBTD68E7Y
+    tracking_id          : # take out analytics until you figure out how to get a consent button G-4JBTD68E7Y
 
 
 # Site Author
