--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "custom" # false (default), "google", "google-universal", "custom"
+  provider               :  false #"custom" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : # take out analytics until you figure out how to get a consent button G-4JBTD68E7Y
 
