added video to animation page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,13 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Animations"
+    url: /animations/   
+
   - title: "MSci"
     url: /msci/    
 
-  - title: "HAB"
+  - title: "High Altitude Balloon"
     url: /hab/    
     
-  - title: "Animations"
-    url: /animations/    
+ 
