--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-  hide                   : # true, false (default)
+  hide                   : true # true, false (default)
 search                   : # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
@@ -126,6 +126,15 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    - label: LinkedIn
+      icon: "fab fa-linkedin-in"
+      url: "https://www.linkedin.com/in/ronan-laker-88b373101/"
+    - label: ORCID
+      - icon: "fab fa-orcid"
+      - url: "https://orcid.org/0000-0002-6577-5515"
+    - label: "Google Scholar"
+      -icon: "fas fa-graduation-cap"
+      -url: "https://scholar.google.com/citations?user=59iEPNwAAAAJ"
 
 # Site Footer
 footer:
@@ -138,7 +147,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: https://github.com/rlaker
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
