--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Animations"
-    url: /animations/   
+  - title: "Visualisations"
+    url: /vis/   
 
   - title: "MSci"
     url: /msci/    
