--- a/_config.yml
+++ b/_config.yml
@@ -313,3 +313,18 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _projects
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: false
+      share: false
+      sidebar:
+        nav: "projects"
+
+collections:
+  projects:
+    output: true
+    permalink: /:collection/:path/
