--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "uglify-js": "^3.13.6",
-    "minimatch": ">=3.0.5"
+    "minimatch": ">=3.0.5",
+    "shell-quote": ">=1.7.3"
   },
   "scripts": {
     "uglify": "uglifyjs assets/js/vendor/jquery/jquery-3.5.1.js assets/js/plugins/jquery.fitvids.js assets/js/plugins/jquery.greedy-navigation.js assets/js/plugins/jquery.magnific-popup.js assets/js/plugins/jquery.ba-throttle-debounce.js assets/js/plugins/smooth-scroll.js assets/js/plugins/gumshoe.js assets/js/_main.js -c -m -o assets/js/main.min.js",
