Added header to projects plus obsidian tutorial

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ projects:
   - title: "High Altitude Balloon"
     url: /projects/hab/    
 
+  - title: "Obsidian Tutorial"
+    url: /projects/obsidian/    
+
   - title: "Visualisations"
     url: /vis/  
 
