--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "engines": {
     "node": ">= 0.10.0"
   },
+  "dependencies": {
+    "minimatch": ">=3.0.5",
+    "shell-quote": ">=1.7.3"
+  },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
