--- a/_config.yml
+++ b/_config.yml
@@ -301,7 +301,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: # true
       share: true
@@ -312,7 +312,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
   # _projects
   - scope:
       path: ""
