updated author profile

--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Ronan Laker"
   avatar           : "images/profile.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "President's Scholar PhD student at Imperial College London studying the solar wind with Parker Solar Probe and Solar Orbiter"
+  bio              : "Interested in anything data: space, trains and weather balloons"
   location         : "London"
   email            :
   links:
