--- a/_config.yml
+++ b/_config.yml
@@ -321,6 +321,7 @@ defaults:
       layout: single
       author_profile: false
       share: false
+      read_time: true
       sidebar:
         nav: "projects"
 
