--- a/_config.yml
+++ b/_config.yml
@@ -303,8 +303,9 @@ defaults:
       layout: single
       author_profile: false
       read_time: true
+      show_date: true
       comments: # true
-      share: true
+      share: false
       related: true
   # _pages
   - scope:
@@ -322,6 +323,7 @@ defaults:
       author_profile: false
       share: false
       read_time: true
+      show_date: true
       sidebar:
         nav: "projects"
 
