--- a/_config.yml
+++ b/_config.yml
@@ -307,6 +307,7 @@ defaults:
       comments: # true
       share: false
       related: true
+      mathjax: true
   # _pages
   - scope:
       path: ""
