--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ footer:
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/LakerRonan"
+      # url: "https://twitter.com/LakerRonan"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
