--- a/_config.yml
+++ b/_config.yml
@@ -116,16 +116,16 @@ author:
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/LakerRonan"
+      # url: "https://twitter.com/LakerRonan"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/rlaker"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+    - label: "Unsplash"
+      icon: "fab fa-brands fa-unsplash"
+      url: "https://unsplash.com/@rlaker"
     - label: LinkedIn
       icon: "fab fa-linkedin-in"
       url: "https://www.linkedin.com/in/ronan-laker-88b373101/"
